tdf#115490 : Avoid transliteration while doing VLOOKUP

Change-Id: I9b212910baa9d1b58e846e8e687bb10ab6106558